Add Foreign Key Constraints to Sessions (#4)
* Updating required schema

* Updating schema for storage to be more streamlined

* Fixing minor bugs and renaming functions/interfaces

* Making manager more streamlined by only exposing required functions

* Fixing and streamlining bugs around flow verification

* Updating generated code

* Updating generated code
