# pkg/api/v1/docs/api_swagger.json
@@ -282,7 +282,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Device Code Identifier",
+                        "description": "Device Flow Identifier",
                         "name": "identifier",
                         "in": "query"
                     }
@@ -421,6 +421,12 @@
                     "200": {
                         "description": "OK",
                         "schema": {
+                            "$ref": "#/definitions/models.ServiceKeyLoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
                             "type": "string"
                         }
                     },
@@ -467,6 +473,32 @@
                     "type": "integer"
                 },
                 "user_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ServiceKeyLoginResponse": {
+            "type": "object",
+            "properties": {
+                "organization": {
+                    "type": "string"
+                },
+                "resource_id": {
+                    "type": "string"
+                },
+                "resource_type": {
+                    "type": "string"
+                },
+                "service_key_id": {
+                    "type": "string"
+                },
+                "service_session_id": {
+                    "type": "string"
+                },
+                "service_session_secret": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
